@startuml class_diagram
    package django.contrib.auth.models <<Folder>> {
        class AbstractUser{
            username : string
            password : string
            email : string
            is_staff : boolean
            is_active : boolean
            is_superuser : boolean
        }
    }

    package accounts <<Folder>> {
        class User {
            profile_picture: Image
            email_validated: DateTime
            updated_at: DateTime
            <<Property>>Score: int
        }
        User --|> AbstractUser
    }

    package core <<Folder>> {
        abstract UniqueNameMixin {
            <<unique>> name
        }

        class Business
        Business --|> UniqueNameMixin

        class ClientUser {
            <<optional>>profile_picture : image
            <<calculated property>>score : integer
        }
        ClientUser --|> User
        note right of ClientUser::score
            Sum of all UserScoreModifier.score
        end note

        class Company {
            <<optional>>logo : image
            <<calculated property>>score : integer
            description : text
        }
        Company --|> UniqueNameMixin
        Company --> Business
        note right of Company::score
            Sum of all CompanyBranch.Judgement.vote
        end note

        enum Vote {
            VERY_BAD = -2,
            BAD = -1,
            GOOD = 1,
            VERY_GOOD = 2
        }

        class CompanyBranch {
            <<optional>> address : text
            <<calculated property>>score : integer
        }
        CompanyBranch --|> UniqueNameMixin
        CompanyBranch --> Company
        note right of CompanyBranch::score
            Sum of all Judgement.vote
        end note

        class Judgement {
            opinion : text
        }
        Judgement --> CompanyBranch
        Judgement --> ClientUser
        Judgement --> Vote

        class UserScoreModifierInstance {
            date_time: datetime
        }
        UserScoreModifierInstance --> ClientUser
        UserScoreModifierInstance --> UserScoreModifierType

        class UserScoreModifierType {
            score : integer
        }
        UserScoreModifierType --|> UniqueNameMixin
    }
@enduml
